Fixed right list visibility bug. Improved skin.

--- a/client/styles.css
+++ b/client/styles.css
@@ -1,10 +1,20 @@
 .item {
-    padding-top: 1em;
-    padding-bottom: 1em;
+    padding-top: 0.1em;
+    padding-bottom: 0.1em;
+    cursor: default;
 }
 .item:hover .action-button {
     visibility: visible !important;
 }
 .action-button {
     visibility: hidden;
+    font-size: 1.4em;
+    cursor: pointer;
+}
+.panel-body {
+    height: 200px;
+    overflow-y: scroll;
+}
+button {
+    border-radius: 4px;
 }
